Geometry Nodes Point instance Geometry Crashes When Connecting Group Input to the Instance Geometry Socket #91238

Closed
opened 2021-09-07 12:27:28 +02:00 by Zijun Zhou · 7 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 16:56, hash: d7d8eb7de4
Worked: none

Short description of error
When you try to instance the geometry from the Group Input node Blender just crashes. If you add a Boolean node or something after Group Input then it works as expected.

Exact steps for others to reproduce the error
Based on the default startup

  1. Open Blender and go to Geometry nodes workspace, and create a GN node tree to the default cube, add point instace node switched to Geometry drop down.
  2. Plug the group input to the instance geometry socket (the second socket), and plug whatever to the first one
  3. It crashes, then please redo the first step
  4. Plug the group input to the second socket, then add a mesh boolean node in between, then connect whatever to the first socket
  5. See how it works as expected.

Here is the video:
GN Instance Geometry Crash Bug.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 16:56, hash: `d7d8eb7de4` Worked: none **Short description of error** When you try to instance the geometry from the Group Input node Blender just crashes. If you add a Boolean node or something after Group Input then it works as expected. **Exact steps for others to reproduce the error** Based on the default startup 1. Open Blender and go to Geometry nodes workspace, and create a GN node tree to the default cube, add point instace node switched to Geometry drop down. 2. Plug the group input to the instance geometry socket (the second socket), and plug whatever to the first one 3. It crashes, then please redo the first step 3. Plug the group input to the second socket, then add a mesh boolean node in between, then connect whatever to the first socket 4. See how it works as expected. Here is the video: [GN Instance Geometry Crash Bug.mp4](https://archive.blender.org/developer/F10382525/GN_Instance_Geometry_Crash_Bug.mp4)
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

[oops, wrong task]

[oops, wrong task]

This issue was referenced by c2ce68a018

This issue was referenced by c2ce68a0187ff8d6c8d0beafa0a3d655899a1d8f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-09-07 13:19:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91238
No description provided.