Fix T91238: crash when instancing geometry group input